--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ kramdown:
 author: 
   name: GitDC
   email: dchan0831@gmail.com
-  link: http://www.gitdc.com
+  link: http://gitdc.com
   weibo: http://weibo.com/207124240
   github: http://github.com/gitcdc
 
 # 站点信息
-title: GitDC | 探索互联网之路
-description: GitDC | 探索互联网之路
+title: GitDC | DC的随想录
+description: GitDC | DC的随想录
 url: http://www.gitdc.com
 rss_url: /pages/atom.xml
 
